# cmake-stm32l4-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-app_arm-gcc.yml  buildNtest-core_linux-gcc.yml  test-lib-core.yml
app/: CMakeLists.txt  main.cpp
app/B-L475E-IOT01A/: CMakeLists.txt  main.cpp
app/B-L475E-IOT01A/stm32cubel4/: stm32l4xx_hal_timebase_tim.c
app/native/: CMakeLists.txt
app/raspberry-pi/: CMakeLists.txt  main.cpp
app/stm32cubel4/: freertos.c  stm32l4xx_hal_conf.h  stm32l4xx_hal_msp.c  stm32l4xx_it.c  stm32l4xx_it.h
cmake/: arm-gcc-cortex-m4.cmake  arm-gcc-cortex-toolchain.cmake  gcc-linux-toolchain.cmake  pi-zero-gcc-toolchain.cmake  utilities.cmake
core/: CMakeLists.txt  calculator.cpp
include/: calculator.hpp
src/: CMakeLists.txt  calculator.cpp
tests/: CMakeLists.txt  main.cpp
tools/: StartOpenODC.bat  build_app.sh  build_app_cortex-m4.sh  build_app_native.sh  build_app_raspberry.sh  build_tests.sh  rebuild_app.sh  rebuild_tests.sh
